Fix letter-spacing for site titles in main.scss

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,3 +6,7 @@
 .post-title {
   letter-spacing: normal !important;
 }
+
+.site-title {
+  letter-spacing: normal  !important;
+}
